tests/init/neg/cycle-structure.check
-- Error: tests/init/neg/cycle-structure.scala:9:13 --------------------------------------------------------------------
9 |    val x = A(this)   // error
  |            ^^^^^^^
  |            Unsafe leaking of uninitialized value: the leaked value is used.  Calling trace:
  |            -> case class B(a: A) {	[ cycle-structure.scala:7 ]
  |               ^
  |            -> val x = A(this)   // error	[ cycle-structure.scala:9 ]
  |                       ^^^^^^^
  |
  |            The leaked uninitialized value is used as follows:
  |            -> case class A(b: B) {	[ cycle-structure.scala:1 ]
  |               ^
  |            -> val x1 = b.x	[ cycle-structure.scala:2 ]
  |                        ^^^
-- Error: tests/init/neg/cycle-structure.scala:3:13 --------------------------------------------------------------------
3 |    val x = B(this)   // error
  |            ^^^^^^^
  |            Unsafe leaking of uninitialized value: the leaked value is used.  Calling trace:
  |            -> case class A(b: B) {	[ cycle-structure.scala:1 ]
  |               ^
  |            -> val x = B(this)   // error	[ cycle-structure.scala:3 ]
  |                       ^^^^^^^
  |
  |            The leaked uninitialized value is used as follows:
  |            -> case class B(a: A) {	[ cycle-structure.scala:7 ]
  |               ^
  |            -> val x1 = a.x	[ cycle-structure.scala:8 ]
  |                        ^^^
